RESOLVED FIXED29821
[Qt] Missing eventSender.contextClick implementation
https://bugs.webkit.org/show_bug.cgi?id=29821
Summary [Qt] Missing eventSender.contextClick implementation
Jakub Wieczorek
Reported 2009-09-28 12:36:33 PDT
The EventSender implementation is missing contextClick() function.
Attachments
Implement eventSender.contextClick() (2.29 KB, patch)
2009-09-28 12:39 PDT, Jakub Wieczorek
no flags
Update the Skipped list. (1.81 KB, patch)
2009-09-28 12:42 PDT, Jakub Wieczorek
no flags
Jakub Wieczorek
Comment 1 2009-09-28 12:39:59 PDT
Created attachment 40250 [details] Implement eventSender.contextClick()
Jakub Wieczorek
Comment 2 2009-09-28 12:42:48 PDT
Created attachment 40251 [details] Update the Skipped list.
Simon Hausmann
Comment 3 2009-09-29 00:39:10 PDT
Comment on attachment 40250 [details] Implement eventSender.contextClick() Thanks!
Simon Hausmann
Comment 4 2009-09-29 00:39:16 PDT
Comment on attachment 40251 [details] Update the Skipped list. r=me
WebKit Commit Bot
Comment 5 2009-09-29 02:49:03 PDT
Comment on attachment 40250 [details] Implement eventSender.contextClick() Clearing flags on attachment: 40250 Committed r48864: <http://trac.webkit.org/changeset/48864>
WebKit Commit Bot
Comment 6 2009-09-29 02:56:22 PDT
Comment on attachment 40251 [details] Update the Skipped list. Clearing flags on attachment: 40251 Committed r48867: <http://trac.webkit.org/changeset/48867>
WebKit Commit Bot
Comment 7 2009-09-29 02:56:27 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.