2009-09-29  Jakub Wieczorek  <faw217@gmail.com>

Reviewed by Simon Hausmann.

        [Qt] Implement eventSender.contextClick().
        https://bugs.webkit.org/show_bug.cgi?id=29821

        * DumpRenderTree/qt/jsobjects.cpp:
        (EventSender::contextClick):
        * DumpRenderTree/qt/jsobjects.h:

Canonical link: https://commits.webkit.org/40424@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48864 268f45cc-cd09-0410-ab3c-d52691b4dbfc